# onpair_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: OnPairConfig.cmake.in  OnPairTargetHelpers.cmake
examples/: CMakeLists.txt  basic_usage.cpp
include/: bit_packing.h  dynamic_threshold.h  lpm.h  lpm16.h  onpair.h  onpair16.h  onpair_mini.h  pair_hash.h
include/onpair/core/: dictionary.h  store.h  store_view.h  types.h
include/onpair/decoding/: token_cursor.h
include/onpair/decoding/detail/: decode_all.h
include/onpair/encoding/: lpm.h
include/onpair/encoding/parsing/: bit_writer.h
include/onpair/encoding/training/: config.h  dynamic_threshold.h
include/onpair/search/: aho_corasick_trie.h  eq_search.h
include/onpair/search/automata/: aho_corasick_automaton.h  eq_automaton.h  kmp_automaton.h  prefix_automaton.h  scan.h
src/: onpair.cpp  onpair16.cpp  onpair_mini.cpp
src/onpair/column/: column.cpp
src/onpair/encoding/training/: trainer.cpp
tests/: CMakeLists.txt
tests/core/: test_dictionary.cpp  test_dictionary_view.cpp  test_store.cpp  test_store_view.cpp  test_types.cpp
tests/decoding/: test_decode_all.cpp  test_decode_all_offsets.cpp  test_decoder.cpp  test_token_cursor.cpp
tests/encoding/: test_bit_writer.cpp  test_lpm.cpp  test_parser.cpp  test_trainer.cpp
tests/helpers/: assertions.h  corpus.h
tests/integration/: test_column_api.cpp  test_roundtrip.cpp  test_serialization.cpp
tests/search/: test_aho_corasick_automaton.cpp  test_aho_corasick_lazy_automaton.cpp  test_aho_corasick_online_automaton.cpp  test_combinators.cpp  test_eq_automaton.cpp  test_eq_search.cpp  test_kmp_automaton.cpp  test_prefix_automaton.cpp  test_prefix_search.cpp  test_tokenize.cpp
